--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.1.2",
     "html-webpack-plugin": "^5.3.1",
+    "redux-logger": "^3.0.6",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
@@ -34,7 +35,12 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   }
 }
