--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "## Instruction 1. Allocate around 4 days on this project _(Spending more time is okay but we believe that 4 hours is reasonable to complete all requirements and some bonus points)_ 2. Create a web application that consumes [Github API](https://developer.github.com/v3/) and follow the [requirements](https://github.com/oddle-developer/oddle-frontend-challenge#requirements) 3. Host your production ready application on [Heroku](http://heroku.com) or [Now](https://zeit.co/now) 4. Push your new repository in your Github account 5. Send us the links to your Github repository and the deployed application 6. While completing all bonus points are not mandatory but it is expected to complete some of them since the core requirements should be finished within 4 hours 7. We really appreciate if you are willing to spend more time to finish all those bonus tasks",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development",
+    "dev": "webpack serve",
     "build": "webpack --mode production",
-    "start": "webpack serve --open 'Firefox' --mode development"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -38,6 +38,7 @@
   "dependencies": {
     "@babel/runtime": "^7.13.10",
     "axios": "^0.21.1",
+    "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "lodash": "^4.17.21",
     "react": "^17.0.1",
